fixed the formating error on khtml based browers
the <br> tags were not formating correctly leaving white space between menu items

--- a/mystyle.css
+++ b/mystyle.css
@@ -25,10 +25,14 @@ p.nmp {
   margin: 0;
   padding: 0;
 }
-
 a { 
   color: #858585;
   font-family: 'Ubuntu Mono', monospace;
+}
+a br {
+  content: " ";
+  display: block;
+  margin: 0em;
 }
 .sidenav {
   height: 100%;
